# literacy

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  process.nu
.cargo/: config.toml
app/: Cargo.toml
app/src/: app.rs  lib.rs  shell.rs
app/src/reader/: audio.rs  controls.rs  helper.rs  mod.rs  pages.rs  segment.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: fileserv.rs  main.rs
style/: main.scss  variables.scss
style/reader/: content.scss  controls.scss  main.scss  pages.scss
