[workspace]
resolver = "2"
members = ["common", "app", "frontend", "server"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.package]
version = "0.1.0-rc1"
edition = "2024"

[workspace.dependencies]
leptos = { version = "0.7", features = ["nightly"] }
leptos_meta = { version = "0.7"}
leptos_router = { version = "0.7", features = ["nightly"] }
leptos_axum = { version = "0.7" }
leptos-mview = { version = "0.4" }
leptos-use = { version = "0.15" }

web-sys = { version = "0.3", features = [
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "HtmlAudioElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Blob",
  "Url",
  "Response",
  "Headers",
  "ReadableStream",
  "DomException",
  "AudioDestinationNode",
  "BaseAudioContext",
  "AudioNode"
]}
wasm-bindgen-futures = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

axum = "0.7"
cfg-if = "1"
console_error_panic_hook = "0.1"
console_log = "1"
http = "1"
log = "0.4"
simple_logger = "5"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
wasm-bindgen = "0.2"
rand = "0.9"
getrandom = { version = "0.3", features = [ "wasm_js" ] }

leptos_icons = "0.5"
icondata = { version = "0.5", default-features = false, features = [ "font-awesome" ] }

[[workspace.metadata.leptos]]
name = "app"
env = "DEV"

bin-package = "server"
lib-package = "frontend"

site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets"

site-addr = "[::0]:80"
reload-port = 3001

browserquery = "defaults"

watch = false

bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
