[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos-mview.workspace = true
leptos-use.workspace = true

wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

rand.workspace = true
getrandom.workspace = true

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

leptos_icons.workspace = true
icondata.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "leptos-use/ssr", "dep:leptos_axum"]
